further fixing of the desktop nav, fixed link alignment

--- a/styles/_header.sass
+++ b/styles/_header.sass
@@ -110,10 +110,13 @@
             position: static
             opacity: 1
             background-color: white
-            height: 100%
+            height: 28px
             display: block
             width: auto
             transform: scale(1,1)
+
+            justify-content: center
+            align-items: center
 
 
         &__ul
@@ -121,6 +124,9 @@
             column-gap: 48px
             justify-content: center
             align-items: center
+
+            margin-top: 0
+
 
         &__link
             color: #060a24
