--- a/styles/style.css
+++ b/styles/style.css
@@ -171,11 +171,17 @@ body {
     position: static;
     opacity: 1;
     background-color: white;
-    height: 100%;
+    height: 28px;
     display: block;
     width: auto;
     -webkit-transform: scale(1, 1);
             transform: scale(1, 1);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .header__ul {
     -webkit-box-orient: horizontal;
@@ -190,6 +196,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    margin-top: 0;
   }
   .header__link {
     color: #060a24;
